--- a/IndiGO Clone/style.css
+++ b/IndiGO Clone/style.css
@@ -445,26 +445,31 @@ input[type="date"] {
     outline: none;
 }
 
-/* Error Popup CSS */
-.error-popup {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+/* error pop-up */
+.error-list-container {
+    display: none; 
+    position: relative;
+    margin: auto;
     background-color: rgba(255, 0, 0, 0.8);
     color: white;
     padding: 20px;
     border-radius: 10px;
-    font-family: Poppins, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     text-align: center;
-    z-index: 1000;
+    width: 50%;
+    margin-top: 20px;
 }
 
-.error-popup p {
-    margin: 0;
+.error-list-container ul {
+    list-style-type: none;
+    padding: 0;
 }
+
+.error-list-container ul li {
+    margin: 10px 0;
+}
+
 
 #gallery {
     height: 100vh;
