--- a/IndiGO Clone/style.css
+++ b/IndiGO Clone/style.css
@@ -251,8 +251,8 @@ input[type="radio"]:hover {
     cursor: pointer;
 }
 #promoCode {
-    width: 170px;
-    height: 25px;
+    display: inline-block;
+    width: 160px;
     font-size: 16px;
     border: none;
     background-color: white;
@@ -591,7 +591,6 @@ input[type="date"] {
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    font-family: Poppins;
 }
 
 .modal-content {
@@ -603,6 +602,7 @@ input[type="date"] {
     text-align: center;
     position: relative;
     z-index: 1001;
+    font-family: Poppins;
 }
 
 .close-btn {
@@ -623,7 +623,7 @@ input[type="date"] {
     filter: blur(5px); 
 }
 
-#modalBtn {
+#submitPromoBtn {
     height: 35px;
     width: 150px;
     margin-top: 1em;
@@ -634,12 +634,27 @@ input[type="date"] {
     border: none;
 }
 
-#modalBtn:hover {
+#submitPromoBtn:hover {
     cursor: pointer;
 }
 
-#modalText {
+#promoInput {
     margin-top: 1em;
+    padding: 10px;
+    width: 80%;
+    font-size: medium;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
+
+#promoInput:focus {
+    outline: 2px solid #009;
+}
+
+#promoLabel {
+    display: block;
+    margin-bottom: 10px;
+    font-size: medium;
 }
 
 #faqSec {
